Added new info to note.txt file

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
   <!--link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}"-->
   <title> Fashion Store </title>
-  <meta name = "description" content = "Fashion Brand">
+  <meta name = "description" content = "Generic">
   <meta name="keywords" content="fashion, clothes, shoes, bags, accessories, male wears, female wears">
   
   
