--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,13 @@
   <meta name="theme-color">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename = 'style/index.css')}}"/>
-  <link rel="icon" type="image/jpg" href="{{ url_for('static', filename = 'images/logo3.png')}}"> 
+  <link rel="icon" type="image/jpg" href="{{ url_for('static', filename = 'images/generic logo.png')}}"> 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
   <!--link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}"-->
-  <title> Fashion Store </title>
-  <meta name = "description" content = "Generic">
-  <meta name="keywords" content="fashion, clothes, shoes, bags, accessories, male wears, female wears">
+  <title> Generic Store </title>
+  <meta name = "description" content = "All you need at one stop">
+  <meta name="keywords" content="store, marketplace, jumia, konga, amazon, fashion, clothes, shoes, bags, accessories, male wears, female wears">
   
   
   {% block head %}{% endblock %}
